# Programing-Contest-Callenge-Bokk

./: 1.ipynb  2-1.ipynb  2-2.ipynb  2-3.ipynb  2-4.ipynb  2-5.ipynb  2-6.ipynb  2-7.ipynb  3-1.ipynb  3-2.ipynb  README.md  pyproject.toml  test.ipynb
