[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
