[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
networkx = "^2.8.8"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
