[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
networkx = "^2.8.8"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
